--- a/package.json
+++ b/package.json
@@ -21,10 +21,18 @@
     "test": "mocha"
   },
   "dependencies": {
-    "yeoman-generator": "~0.13.0"
+    "yeoman-generator": "~0.13.0",
+    "github": "~0.1.12",
+    "json-file": "0.0.0",
+    "lodash": "~2.2.1",
+    "grunt": "~0.4.1",
+    "chalk": "~0.3.0"
   },
   "devDependencies": {
-    "mocha": "~1.12.0"
+    "mocha": "~1.12.0",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-watch": "~0.5.0"
   },
   "peerDependencies": {
     "yo": ">=1.0.0-rc.1"
