editing readnme.md for launch

--- a/app/templates/_yoextensions.json
+++ b/app/templates/_yoextensions.json
@@ -1,5 +1,5 @@
 {
-    "packageJSONTemplate": "app/templates/_package.json",
+    "packageJsonTemplate": "app/templates/_package.json",
     "extensions": {
         "generator:subgenrator": "*"
     }
