--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   "dependencies": {
     "yeoman-generator": "~0.13.0",
     "github": "~0.1.12",
-    "json-file": "0.0.0",
     "lodash": "~2.2.1",
     "grunt": "~0.4.1",
-    "chalk": "~0.3.0"
+    "chalk": "~0.3.0",
+    "json-file": "git://github.com/simonfan/json-file.git"
   },
   "devDependencies": {
     "mocha": "~1.12.0",
