--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
-	"name": "generator-extendable-generator",
-	"version": "0.0.0",
-	"description": "A generator for Yeoman",
-	"keywords": [
-		"yeoman-generator"
-	],
-	"homepage": "https://github.com/simonfan/generator-extendable-generator",
-	"bugs": "https://github.com/simonfan/generator-extendable-generator/issues",
-	"author": {
-		"name": "",
-		"email": "",
-		"url": "https://github.com/simonfan"
-	},
-	"main": "app/index.js",
-	"repository": {
-		"type": "git",
-		"url": "git://github.com/simonfan/generator-extendable-generator.git"
-	},
-	"scripts": {
-		"test": "mocha"
-	},
-	"dependencies": {
-		"yeoman-generator": "~0.13.0",
-        "generator-generator": "*",
-		"github": "~0.1.12",
-		"lodash": "~2.2.1",
-		"grunt": "~0.4.1",
-		"chalk": "~0.3.0",
-		"json-file": "git://github.com/simonfan/json-file.git"
-	},
-	"devDependencies": {
-		"mocha": "~1.12.0",
-		"grunt-contrib-jshint": "~0.6.0",
-		"grunt-contrib-nodeunit": "~0.2.0",
-		"grunt-contrib-watch": "~0.5.0"
-	},
-	"peerDependencies": {
-		"yo": ">=1.0.0-rc.1"
-	},
-	"engines": {
-		"node": ">=0.8.0",
-		"npm": ">=1.2.10"
-	},
-	"licenses": [
-		{
-			"type": "MIT"
-		}
-	]
+  "name": "generator-extendable-generator",
+  "version": "0.0.0",
+  "description": "A generator for Yeoman",
+  "keywords": [
+    "yeoman-generator"
+  ],
+  "homepage": "https://github.com/simonfan/generator-extendable-generator",
+  "bugs": "https://github.com/simonfan/generator-extendable-generator/issues",
+  "author": {
+    "name": "",
+    "email": "",
+    "url": "https://github.com/simonfan"
+  },
+  "main": "app/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/simonfan/generator-extendable-generator.git"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "dependencies": {
+    "yeoman-generator": "~0.13.0",
+    "github": "~0.1.12",
+    "lodash": "~2.2.1",
+    "grunt": "~0.4.1",
+    "chalk": "~0.3.0",
+    "json-file": "git://github.com/simonfan/json-file.git",
+    "q": "~0.9.7"
+  },
+  "devDependencies": {
+    "mocha": "~1.12.0",
+    "grunt-contrib-jshint": "~0.6.0",
+    "grunt-contrib-nodeunit": "~0.2.0",
+    "grunt-contrib-watch": "~0.5.0",
+    "generator-generator": "*"
+  },
+  "peerDependencies": {
+    "yo": ">=1.0.0-rc.1"
+  },
+  "engines": {
+    "node": ">=0.8.0",
+    "npm": ">=1.2.10"
+  },
+  "licenses": [
+    {
+      "type": "MIT"
+    }
+  ]
 }
